funland/default/httpbin/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpbin
  labels:
    app: httpbin
spec:
  revisionHistoryLimit: 1
  replicas: 1
  selector:
    matchLabels:
      app: httpbin
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: httpbin
    spec:
      containers:
        - image: kong/httpbin
          imagePullPolicy: Always
          name: httpbin
          ports:
            - containerPort: 80
          resources:
            limits:
              cpu: "1"
              memory: 64Mi
              ephemeral-storage: 64Mi
            requests:
              cpu: 10m
              memory: 16Mi
