funland/default/httpbin/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httpbin
spec:
  parentRefs:
    - name: internal
      namespace: gateway
      sectionName: https
  hostnames:
    - "httpbin.batlab.io"
  rules:
    - backendRefs:
        - name: httpbin
          port: 80
